🐛 fix: fix a very large spacing

--- a/flex-projeto/style.css
+++ b/flex-projeto/style.css
@@ -57,7 +57,7 @@ header .menu{
 }
 
 .introduction{
-  height: 100vh;
+  min-height: 70vh; 
   align-items: center;
   justify-content: space-between;
 }
